--- a/recipes/cuban-ropa-vieja.html
+++ b/recipes/cuban-ropa-vieja.html
@@ -1,4 +1,24 @@
 <h1>Cuban Ropa Vieja</h1>
-<img src="https://www.allrecipes.com/thmb/KDwTRuGISFIz16StCfs6xTKqHVM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/79301-cuban-ropa-vieja-step3-145-1-985a9591fd784eb38f4ee11a4262a198.jpg" alt="Cuban Ropa Vieja" width="400" height="300">
+<img src="https://www.allrecipes.com/thmb/KDwTRuGISFIz16StCfs6xTKqHVM=/750x0
+/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/79301-cuban
+-ropa-vieja-step3-145-1-985a9591fd784eb38f4ee11a4262a198.jpg" alt="Cuban Ropa
+ Vieja" width="400" height="300">
 
+<p>This ropa vieja is great served on tortillas or over rice. Add sour cream,
+     cheese, and fresh cilantro on the side.</p>
 
+<h3>Ingredients</h3>
+<ul>
+    <li>1 tablespoon vegetable oil</li>
+    <li>2 pounds beef flank steak</li>
+    <li>1 cup beef broth</li>
+    <li>1 (8 ounce) can tomato sauce</li>
+    <li>1 (6 ounce) can tomato paste</li>
+    <li>1 green bell pepper, seeded and sliced into strips</li>
+    <li>1 small onion, sliced</li>
+    <li>2 cloves garlic, chopped</li>
+    <li>1 teaspoon ground cumin</li>
+    <li>1 teaspoon chopped fresh cilantro</li>
+    <li>1 tablespoon olive oil</li>
+    <li>1 tablespoon white vinegar</li>
+</ul>
