--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <a href="recipes/cuban-ropa-vieja.html">Cuban Ropa Vieja</a>
+    <a href="recipes/grilled-turkey-legs.html">Grilled turkey legs</a>
+    
 </body>
 </html>
