--- a/recipes/grilled-turkey-legs.html
+++ b/recipes/grilled-turkey-legs.html
@@ -6,3 +6,15 @@ TurkeyLegs4x3-bec8406f451340e984c30341320b8521.jpg" alt="Grilled turkey legs"
   width="400" height="300">
 
 <p>These spicy turkey legs are sweet and hot—just like the smoked turkey legs you get at the fair or theme park!</p>
+ <h3>Ingredients</h3>
+ <ul>
+    <li>1 (2 liter) bottle lemon-lime flavored carbonated beverage</li>
+    <li>2 tablespoons sugar</li>
+    <li>2 tablespoons hot sauce</li>
+    <li>1 tablespoon crushed red pepper flakes</li>
+    <li>1 tablespoon black pepper</li>
+    <li>1 large sweet onion, sliced</li>
+    <li>4 turkey legs</li>
+    <li>2 tablespoons honey</li>
+    <li>1 tablespoon steak seasoning</li>
+ </ul>
