--- a/recipes/grilled-turkey-legs.html
+++ b/recipes/grilled-turkey-legs.html
@@ -18,3 +18,16 @@ TurkeyLegs4x3-bec8406f451340e984c30341320b8521.jpg" alt="Grilled turkey legs"
     <li>2 tablespoons honey</li>
     <li>1 tablespoon steak seasoning</li>
  </ul>
+
+ <h3>Steps</h3>
+<ol>
+    <li>Preheat an outdoor grill for high heat, and lightly oil grate.</li>
+    <li>In a large pot, mix the lemon-lime flavored carbonated beverage, sugar,
+         hot sauce, red pepper, pepper, and onion. Place the turkey legs in the
+         mixture, and bring to a boil. Cook 30 to 45 minutes, until the turkey
+         has reached an internal temperature of 180 degrees F (80 degrees C).</li>
+    <li>Remove onion slices from the mixture, and arrange on the prepared grill.
+         Place turkey legs over the onions. Drizzle with honey, and season with
+         steak seasoning. Cook, tuning once, 20 minutes, or until a crisp browned
+         crust has formed on the turkey legs.</li>
+</ol>
