added 3rd recipe and link to index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <a href="recipes/cuban-ropa-vieja.html">Cuban Ropa Vieja</a>
     <a href="recipes/grilled-turkey-legs.html">Grilled turkey legs</a>
+    <a href="recipes/mac-and-cheese.html">Mac and Cheese</a>
     
 </body>
 </html>
